--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -26,7 +26,8 @@
 
 .std-form-layout > .form-layout > .form-page {
 	border-radius: var(--border-radius-md);
-	box-shadow: var(--card-shadow);
+	border: 1px solid var(--gray-200);
+	box-shadow: none;
 	background-color: var(--card-bg);
 }
 
@@ -35,13 +36,15 @@
 
 	.form-section-description {
 		margin-bottom: 10px;
-		font-size: var(--text-xs);
-		color: var(--text-muted);
+		font-size: var(--text-xl);
+		color: var(--gray-900);
 	}
 
 	.section-head {
 		@extend .head-title;
-		font-size: var(--text-base);
+		font-size: var(--text-lg);
+		font-weight: var(--weight-semibold);
+		color: var(--gray-800);
 		width: 100%;
 		padding: var(--padding-sm) var(--padding-md);
 		margin: 0;
@@ -136,9 +139,8 @@
 }
 
 .comment-box {
-	@include card();
 	margin-top: var(--margin-lg);
-	padding: var(--padding-lg);
+	padding: 0;
 	.comment-input-header {
 		@extend .head-title;
 		margin-bottom: var(--margin-sm);
@@ -146,9 +148,13 @@
 	.comment-input-container {
 		.frappe-control {
 			margin-bottom: var(--margin-xs);
-		}
-		.ql-editor {
-			background-color: var(--control-bg);
+			padding-right: 0;
+			.ql-editor {
+				background-color: var(--bg-color) !important;
+				border: 1px solid var(--gray-200);
+				min-height: 24px;
+				padding: 4px;
+			}
 		}
 	}
 
@@ -166,7 +172,7 @@
 	.form-link-title {
 		margin-top: var(--margin-md);
 		margin-bottom: var(--margin-sm);
-		font-weight: var(--text-bold);
+		font-weight: var(--weight-medium);
 	}
 	.form-documents:first-of-type .row:first-child {
 		.form-link-title {
@@ -184,9 +190,10 @@
 			background-color: var(--control-bg);
 			.count {
 				font-size: var(--text-xs);
-				background-color: var(--gray-500);
-				border-radius: var(--border-radius-sm);
-				color: var(--gray-50);
+				font-weight: var(--weight-regular);
+				background-color: var(--bg-color);
+				border-radius: var(--border-radius-full);
+				color: var(--gray-700);
 				padding: 0 var(--padding-xs);
 				margin-right: var(--margin-xs);
 			}
@@ -198,7 +205,7 @@
 		.open-notification {
 			display: inline-flex;
 			align-items: center;
-			background-color: var(--indicator-red-bg);
+			background-color: var(--gray-100);
 			font-size: var(--text-xs);
 			padding: 0 var(--padding-sm);
 			color: var(--indicator-red);
@@ -277,13 +284,14 @@
 }
 
 @mixin form-message-background($color) {
-	background: var(--bg-#{$color});
-	color: var(--text-on-#{$color});
+	border: 1px solid var(--#{$color}-100);
+    color: var(--#{$color}-800);
+    background: var(--#{$color}-50);
 }
 
 .form-message {
 	border-radius: var(--border-radius);
-	padding: var(--padding-md) var(--padding-xl);
+	padding: 8px 10px;
 	font-size: var(--text-md, 13px);
 	margin-bottom: var(--margin-md);
 
@@ -362,14 +370,16 @@
 	z-index: 5;
 	transition: 0.5s top;
 	padding-left: var(--padding-xs);
-	border-bottom: 2px solid var(--border-color);
+	border-bottom: 1px solid var(--border-color);
 	border-radius: var(--border-radius-md) var(--border-radius-md) 0 0;
 
 	.form-tabs {
 		.nav-item {
+			font-size: var(--text-base);
+			font-weight: var(--weight-regular);
 			.nav-link {
-				color: var(--text-muted);
-				padding: var(--padding-md) 0;
+				color: var(--text-light);
+				padding: 10px 0;
 				margin: 0 var(--margin-md);
 
 				&.active {
