--- a/frappe/public/scss/desk/sidebar.scss
+++ b/frappe/public/scss/desk/sidebar.scss
@@ -40,6 +40,8 @@ body[data-route^="Module"] .main-menu {
 .sidebar-menu {
 	.data-pill {
 		width: 100%;
+		justify-content: unset;
+
 	}
 	&.user-actions {
 		margin-bottom: 15px;
@@ -98,7 +100,7 @@ body[data-route^="Module"] .main-menu {
 			}
 
 			use.comment-icon {
-				stroke: var(--gray-500);
+				fill: var(--gray-500);
 			}
 		}
 	}
@@ -106,6 +108,8 @@ body[data-route^="Module"] .main-menu {
 	.sidebar-image-section {
 		width: min(100%, 170px);
 		cursor: pointer;
+		border: 1px solid var(--gray-200);
+		border-radius: var(--border-radius-lg);
 
 		.sidebar-image {
 			height: auto;
@@ -158,7 +162,7 @@ body[data-route^="Module"] .main-menu {
 }
 
 .layout-side-section {
-	font-size: var(--text-md);
+	font-size: var(--text-base);
 	padding-right: 30px;
 
 	> .divider {
@@ -175,13 +179,12 @@ body[data-route^="Module"] .main-menu {
 	}
 
 	.sidebar-label {
+		font-size: var(--text-xs);
+		font-weight: var(--weight-regular);
 		margin-bottom: var(--margin-sm);
-		font-weight: 500;
 		display: flex;
 		align-items: center;
-		color: var(--text-muted);
-		letter-spacing: 0.04rem;
-		font-size: var(--text-sm);
+		color: var(--text-light);
 		.icon {
 			margin: 0;
 			margin-right: var(--margin-xs);
@@ -389,7 +392,7 @@ body[data-route^="Module"] .main-menu {
 	display: inline-flex;
 }
 
-.add-attachment-btn,
+.add-assignment-btn, .add-attachment-btn,
 .shares,
 .followed-by {
 	max-width: 100%;
